--- a/Raythos Aerospace/Views/Category/Edit.cshtml
+++ b/Raythos Aerospace/Views/Category/Edit.cshtml
@@ -1,11 +1,13 @@
 ﻿@model Catagory
 
-
+@{
+    ViewData["Title"] = "Edit";
+}
 
 <form method="post">
     <div class="boeder p-3 mt-4">
         <div class="row pb-2">
-            <h2 class="text-primary"> Create Category</h2>
+            <h2 class="text-primary"> Edit Category</h2>
             <hr />
         </div>
 
@@ -23,7 +25,7 @@
             <span class="text-danger" asp-validation-for="DisplayOrder"></span>
         </div>
 
-        <button action="submit" class="btn btn-primary" style="width:150px">Create</button>
+        <button action="submit" class="btn btn-primary" style="width:150px">Update</button>
         <a asp-controller="Category" asp-action="Index" class="btn btn-secondary" style="width:150px">Back</a>
 
     </div>
