--- a/Raythos Aerospace/Views/Category/Index.cshtml
+++ b/Raythos Aerospace/Views/Category/Index.cshtml
@@ -9,6 +9,8 @@
     <a class="cal-6 btn btn-primary" asp-controller="Category" asp-action="Create">Create</a>
 
 </div>
+<br />
+
 
 <br />
 
@@ -21,6 +23,8 @@
             <th>Name</th>
         
             <th>Order</th>
+
+            <th></th>
         </tr>
     </thead>
 
@@ -35,6 +39,18 @@
                 <td style ="width:50%"> @obj.Name </td>
          
                 <td> @obj.DisplayOrder </td>
+
+                <td>                
+                    <div class="w-75 btn_group" role="group">
+                        <a asp-controller="Category" asp-action="Edit" asp-route-Id="@obj.Id" class="btn btn-primary mx-2">Edit</a>
+                    </div>
+                </td>
+
+                <td>
+                    <div class="w-75 btn_group" role="group">
+                        <a asp-controller="Category" asp-action="Delete" asp-route-Id="@obj.Id" class="btn btn-danger mx-2">Delete</a>
+                    </div>
+                </td>
             </tr>
 
         }
