--- a/Raythos Aerospace/Views/Shared/_Layout.cshtml
+++ b/Raythos Aerospace/Views/Shared/_Layout.cshtml
@@ -30,7 +30,7 @@
                             <a class="nav-link text-dark" asp-controller="Category" asp-action="Index">Category</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-controller="Admin" asp-action="Create">Add Product</a>
+                            <a class="nav-link text-dark" asp-controller="Products" asp-action="Index">Product</a>
                         </li>
                     </ul>
                 </div>
