--- a/Raythos Aerospace/Views/Products/Edit.cshtml
+++ b/Raythos Aerospace/Views/Products/Edit.cshtml
@@ -31,13 +31,13 @@
             </div>
             <div class="form-group">
                 <label asp-for="Price" class="control-label">Price</label>
-                <input asp-for="Price" class="form-control" />
+                <input asp-for="Price" class="form-control"/>
                 <span asp-validation-for="Price" class="text-danger"></span>
             </div>
 
             <div class="form-group">
                 <label asp-for="ImageFile" class="control-label"></label>
-                <input asp-for="ImageFile" type="file" class="form-control" />
+                <input asp-for="ImageFile" type="file" class="form-control"  accept=".jpg, .jpeg, .png, .gif" />
                 <span asp-validation-for="ImageFile" class="text-danger"></span>
             </div>
 
@@ -59,3 +59,10 @@
 </div>
 
 
+@section Scripts
+    {
+    @{
+        <partial name="_ValidationScriptsPartial" />
+
+    }
+}
